# WebScraperSearch

./: .replit  README.md  app.py  auto_fix.py  auto_fix.py.bak  check_env.py.bak  configure_database_url.py  create_admin.py.bak  create_default_admin.py  create_simple_db.py  create_simple_db.py.bak  db_migrations.py  ensure_db_url.py  error_handlers.py.bak  exporters.py  fix_all.py  fix_attribute_errors.py  fix_import_errors.py  fix_missing_columns.py.bak  fix_scraper.py  fix_scraper.py.bak  fix_scraper_db.py.bak  fix_scraper_formatting.py  fix_string_literals.py  fix_string_literals.py.bak  fix_syntax_errors.py  forms.py  forms.py.fixed  get_database_url.py  get_database_url.py.bak  main.py  migrate_database.py  models.py  models.py.bak  pyproject.toml  routes.py  routes.py.bak  routes.py.fixed  scraper.py  scraper.py.bak  (+22 more)
instance/: dev.db  dev.db-journal  simple.db
static/css/: custom.css  style.css
static/js/: script.js
templates/: 404.html  500.html  api_keys.html  citations.html  content.html  error.html  feedback.html  history.html  index.html  layout.html  login.html  register.html  results.html  settings.html  share_summary.html
