[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "psycopg2-binary>=2.9.10",
    "requests-html>=0.10.0",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
    "werkzeug>=3.1.3",
    "google-search-results>=2.4.2",
    "serpapi>=0.1.5",
    "openai>=1.77.0",
    "sqlalchemy>=2.0.40",
    "anthropic>=0.51.0",
]
